Fix slight misalignment

--- a/site/src/layouts/mdx.module.less
+++ b/site/src/layouts/mdx.module.less
@@ -363,7 +363,7 @@
       content: @separator-text;
       position: relative;
       margin-left: @margin-xs;
-      top: 1px;
+      top: 0;
       color: @border-color-base;
     }
 
